istio/authorization-policies/notes-app-allow-mesh.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-mesh
  namespace: notes-app
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - istio-system
